more tweaks. trying to fix problems present on mobile

--- a/assets/compass/sass/views/footer.scss
+++ b/assets/compass/sass/views/footer.scss
@@ -2,6 +2,7 @@
 	background-color: #3a2f27;
 	text-align: center;
 	padding-bottom: 50px;
+	width: 100%;
 	img{
 		margin-top: 25px;
 	}
