--- a/assets/compass/sass/views/home.scss
+++ b/assets/compass/sass/views/home.scss
@@ -219,6 +219,7 @@
 	background-repeat: no-repeat;
 	color: white;
 	margin-top: 80px;
+	width: 100%;
 	.coffee-cup-text{
 		padding-top: 80px;
 		padding-left: 75px;
@@ -227,6 +228,7 @@
 
 .we-source-coffee{
 	background-color: $cream;
+	width: 100%;
 	.spacer{
 		height: 40px;
 		width: 100%;
@@ -248,6 +250,7 @@
 }
 
 .how-it-works{
+	width: 100%;
 	background-color: $cream;
 	height: 100px;
 	line-height: 100px;
@@ -261,6 +264,7 @@
 
 .arrow-holder{
 	position: relative;
+	width: 100%;
 	.arrow-down{
 		width: 0;
 		height: 0;
@@ -277,6 +281,7 @@
 
 
 .coffee-bags{
+	width: 100%;
 	height: 400px;
 	background-image: url('../images/CoffeeBags.jpg');
 	background-size: cover;
@@ -294,6 +299,7 @@
 
 
 .how-it-works2{
+	width: 100%;
 	height: 400px;
 	background-color: $cream;
 	.bag-arrow{
@@ -325,6 +331,7 @@
 }
 
 .how-it-works3{
+	width: 100%;
 	clear: both;
 	height: 400px;
 	background-color: black;
@@ -350,6 +357,7 @@
 
 
 .arrow-holder2{
+	width: 100%;
 	position: relative;
 	.arrow-down2{
 		width: 0;
@@ -365,6 +373,7 @@
 }
 
 .get-started-section{
+	width: 100%;
 	height: 200px;
 	background-color: $cream;
 	text-align: center;
